[package]
name = "libray"
version = "0.1.0"
authors = [
    "Clément Delaunay",
    "Mathias Gianotti",
    "Cécile Cousin",
    "Clément Depraz"
]
edition = "2018"

[lib]
name = "libray"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ppm = { git = "https://github.com/Sivarogu/libppm" }
rayon = "1.3.1"
