[package]
name = "libray-example"
version = "0.1.0"
authors = [
    "Clément Delaunay",
    "Mathias Gianotti",
    "Cécile Cousin",
    "Clément Depraz"
]
edition = "2018"

[dependencies]
libray = { path = ".." }
image = "0.23.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.1"

[profile.release]
debug=true